@@ -31,6 +31,7 @@ import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.fenixedu.academic.domain.CurricularCourse;
 import org.fenixedu.academic.domain.ExecutionYear;
@@ -185,7 +186,8 @@ public class PreviousYearsEnrolmentByYearExecutor extends CurricularRuleExecutor
             final EnrolmentContext enrolmentContext) {
         final Set<DegreeModule> result = new HashSet<DegreeModule>();
 
-        for (final DegreeModule degreeModule : courseGroup.getChildDegreeModulesValidOnExecutionAggregation(enrolmentContext.getExecutionYear())) {
+        for (final DegreeModule degreeModule : courseGroup
+                .getChildDegreeModulesValidOnExecutionAggregation(enrolmentContext.getExecutionYear())) {
             final StudentCurricularPlan studentCurricularPlan = enrolmentContext.getStudentCurricularPlan();
             if (!degreeModule.isLeaf()) {
                 if (studentCurricularPlan.hasDegreeModule(degreeModule)) {
@@ -468,7 +470,15 @@ public class PreviousYearsEnrolmentByYearExecutor extends CurricularRuleExecutor
     private boolean isCurricularRulesSatisfied(EnrolmentContext enrolmentContext, CurricularCourse curricularCourse,
             IDegreeModuleToEvaluate sourceDegreeModuleToEvaluate) {
         RuleResult result = RuleResult.createTrue(sourceDegreeModuleToEvaluate.getDegreeModule());
-        for (final ICurricularRule curricularRule : curricularCourse.getCurricularRules(enrolmentContext.getExecutionPeriod())) {
+        //Besides course unit rules we can only securely evaluate root curricum group rules, other group rules would require that we know the curriculum group 
+        //from where the course unit was collected, otherwise we could wrongly evaluate rules, which is very dangerous if we are collecting course units from 
+        //previous years and curriculum group is not enroled yet. A possible improvement, would be to find the corresponding curriculum groups, but branches 
+        //and optional groups would require extra caution because two different groups might have the same course unit
+        for (final ICurricularRule curricularRule : Stream
+                .concat(curricularCourse.getCurricularRules(enrolmentContext.getExecutionPeriod()).stream(),
+                        enrolmentContext.getStudentCurricularPlan().getRoot()
+                                .getCurricularRules(enrolmentContext.getExecutionPeriod()).stream())
+                .collect(Collectors.toSet())) {
             result = result.and(curricularRule.verify(getVerifyRuleLevel(enrolmentContext), enrolmentContext, curricularCourse,
                     (CourseGroup) sourceDegreeModuleToEvaluate.getDegreeModule()));
         }
